server/deployment/k8s/loan-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  labels:
    app: loan-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      containers:
      - name: loan-service
        image: loretta-bank/loan-service:latest
        ports:
        - containerPort: 8080
